test/tests/stages/18_structures/invalid_types/scalar_required/assign_null_ptr_to_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(x)
  =
  const int(0)
  ;
  return
  const int(0)
  ;
  }
